--- a/src/main/resources/egovframework/egovProps/globals.properties
+++ b/src/main/resources/egovframework/egovProps/globals.properties
@@ -14,19 +14,24 @@
 #-----------------------------------------------------------------------
 
 # \uc6b4\uc601\uc11c\ubc84 \ud0c0\uc785(WINDOWS, UNIX)
-Globals.OsType = UNIX
+Globals.OsType = WINDOWS
 
 # G4C \uc5f0\uacb0\uc6a9 IP (localhost)
 Globals.LocalIp = 127.0.0.1
 
 # DB\uc11c\ubc84 \ud0c0\uc785(mysql,oracle,altibase,tibero,cubrid) - datasource \ubc0f sqlMap \ud30c\uc77c \uc9c0\uc815\uc5d0 \uc0ac\uc6a9\ub428
-Globals.DbType = mysql
-Globals.UserName = ID
-Globals.Password = PW
+Globals.DbType = postgres
+Globals.UserName = ictwayusr
+Globals.Password = ictwayEdu
+
+#postgres
+Globals.DriverClassName = org.postgresql.Driver
+Globals.Url = jdbc:postgresql://10.47.85.35:5432/ictway
+Globals.Schema = cmm
 
 #mysql
-Globals.DriverClassName = net.sf.log4jdbc.DriverSpy
-Globals.Url = jdbc:log4jdbc:mysql://127.0.0.1:3306/database
+#Globals.DriverClassName = net.sf.log4jdbc.DriverSpy
+#Globals.Url = jdbc:log4jdbc:mysql://127.0.0.1:3306/database
 
 #oracle
 #Globals.DriverClassName=oracle.jdbc.driver.OracleDriver
