--- a/pom.xml
+++ b/pom.xml
@@ -198,6 +198,23 @@
 			<artifactId>jdom2</artifactId>
 			<version>2.0.6.1</version>
 		</dependency>
+		
+		<!-- ajax json -->
+		<dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.13.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.13.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.3</version>
+        </dependency>
 
 	</dependencies>
 
