Fix: Globals.Url 수정
기존 개발서버에서 교육서버로 url 변경

--- a/src/main/resources/egovframework/egovProps/globals.properties
+++ b/src/main/resources/egovframework/egovProps/globals.properties
@@ -26,7 +26,7 @@ Globals.Password = ictwayEdu
 
 #postgres
 Globals.DriverClassName = org.postgresql.Driver
-Globals.Url = jdbc:postgresql://10.47.85.35:5432/ictway
+Globals.Url = jdbc:postgresql://edu-server:5432/ictway
 Globals.Schema = cmm
 
 #mysql
