Fix: Validator 라이브러리 버전 수정 및 bean  객체 주입
Egov Validator와 충돌로 인해 bean 객제 주입하여 해결함

--- a/pom.xml
+++ b/pom.xml
@@ -218,9 +218,9 @@
 
 		<!-- validation체크 (@valid) 시작 -->		
 		<dependency>
-		    <groupId>org.hibernate.validator</groupId>
-		    <artifactId>hibernate-validator</artifactId>
-		    <version>7.0.5.Final</version>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>5.2.4.Final</version>
 		</dependency>
 				
 		<dependency>
